[tool.poetry]
name = "hng12-backend-task"
version = "0.1.0"
description = ""
authors = ["Agimuche <Agimuche1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
# Add other dependencies below
uvicorn = "^0.34.0"
fastapi = "^0.115.8"
pytz = "^2025.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
